Fix: action shell

--- a/action.yml
+++ b/action.yml
@@ -25,5 +25,6 @@ runs:
         python-version: '3.9'
     - id: update-yaml
       run: python ${{github.action_path}}/update-yaml.py -i ${{ inputs.infile }} -V "${{ inputs.varlist }}" > .update-yaml.tmp
+      shell: bash
     - run: mv .update-yaml.tmp ${{ inputs.infile }}
       shell: bash
