Fix: outputs value

--- a/action.yml
+++ b/action.yml
@@ -23,8 +23,11 @@ runs:
     - uses: actions/setup-python@v4
       with:
         python-version: '3.9'
-    - id: update-yaml
-      run: python ${{github.action_path}}/update-yaml.py -i ${{ inputs.infile }} -V "${{ inputs.varlist }}" > .update-yaml.tmp
+    - run: |
+        python ${{github.action_path}}/update-yaml.py -i ${{ inputs.infile }} -V "${{ inputs.varlist }}" > ${{github.action_path}}/.update-yaml.tmp
+        updated=`diff "${{ inputs.infile }}" "${{github.action_path}}/.update-yaml.tmp" | wc -l`
+        if [ "${updated} == '0' ]; then updated='false' ; else updated='true' ; fi
+        echo "::set-output name=updated::${updated}" 
+        mv ${{github.action_path}}/.update-yaml.tmp ${{ inputs.infile }}
       shell: bash
-    - run: mv .update-yaml.tmp ${{ inputs.infile }}
-      shell: bash
+      id: update-yaml
