Fix: outputs value

--- a/action.yml
+++ b/action.yml
@@ -24,10 +24,10 @@ runs:
       with:
         python-version: '3.9'
     - run: |
-        python ${{github.action_path}}/update-yaml.py -i ${{ inputs.infile }} -V "${{ inputs.varlist }}" > ${{github.action_path}}/.update-yaml.tmp
-        updated=`diff "${{ inputs.infile }}" "${{github.action_path}}/.update-yaml.tmp" | wc -l`
-        if [ "${updated} == '0' ]; then updated='false' ; else updated='true' ; fi
+        python ${{ github.action_path }}/update-yaml.py -i ${{ inputs.infile }} -V "${{ inputs.varlist }}" > ${{ github.action_path }}/.update-yaml.tmp
+        updated=`diff "${{ inputs.infile }}" "${{ github.action_path }}/.update-yaml.tmp" | wc -l`
+        if [ "${updated}" = '0' ]; then updated='false' ; else updated='true' ; fi
         echo "::set-output name=updated::${updated}" 
-        mv ${{github.action_path}}/.update-yaml.tmp ${{ inputs.infile }}
+        mv ${{ github.action_path }}/.update-yaml.tmp ${{ inputs.infile }}
       shell: bash
       id: update-yaml
