--- a/action.yml
+++ b/action.yml
@@ -27,6 +27,11 @@ runs:
       shell: bash
     - run: >
         updated=`diff "${{ inputs.infile }}" "${{ github.action_path }}/.update-yaml.tmp" | wc -l | sed -e 's/ //g'` ;
+    - run: >
+        updated=`diff ${{ inputs.infile }} ${{ github.action_path }}/.update-yaml.tmp | wc -l | sed -e 's/ //g'` ;
+        if [ $updated = 0 ]; then updated='false' ; else updated='true' ; fi ;
+    - run: >
+        updated=`diff ${{ inputs.infile }} ${{ github.action_path }}/.update-yaml.tmp | wc -l | sed -e 's/ //g'` ;
         if [ ${updated} = 0 ]; then updated='false' ; else updated='true' ; fi ;
         echo "::set-output name=updated::${updated}"
       shell: bash
