Fix: outputs value

--- a/action.yml
+++ b/action.yml
@@ -26,10 +26,10 @@ runs:
     - run: python ${{ github.action_path }}/update-yaml.py -i ${{ inputs.infile }} -V "${{ inputs.varlist }}" > ${{ github.action_path }}/.update-yaml.tmp
       shell: bash
     - run: >
-        updated=`diff "${{ inputs.infile }}" "${{ github.action_path }}/.update-yaml.tmp" | wc -l | sed -e 's/ //g'` ;
+        updated=$(diff ${{ inputs.infile }} ${{ github.action_path }}/.update-yaml.tmp | wc -l | sed -e 's/ //g') ;
       shell: bash
     - run: >
-        updated=`diff ${{ inputs.infile }} ${{ github.action_path }}/.update-yaml.tmp | wc -l | sed -e 's/ //g'` ;
+        updated=$(diff ${{ inputs.infile }} ${{ github.action_path }}/.update-yaml.tmp | wc -l | sed -e 's/ //g') ;
         if [ $updated = 0 ]; then updated='false' ; else updated='true' ; fi ;
       shell: bash
     - run: >
