--- a/action.yml
+++ b/action.yml
@@ -23,20 +23,13 @@ runs:
     - uses: actions/setup-python@v4
       with:
         python-version: '3.9'
-    - run: python ${{ github.action_path }}/update-yaml.py -i ${{ inputs.infile }} -V "${{ inputs.varlist }}" > .update-yaml.tmp
+    - run: 
+        python ${{ github.action_path }}/update-yaml.py -i ${{ inputs.infile }} -V "${{ inputs.varlist }}" > ${{ github.action_path }}/.update-yaml.tmp
       shell: bash
     - run: >
-        diff ${{ inputs.infile }} .update-yaml.tmp | wc -l | sed -e 's/ //g' ;
-      shell: bash
-    - run: >
-        updated=$(diff ${{ inputs.infile }} .update-yaml.tmp | wc -l | sed -e 's/ //g') ;
+        updated=$((diff ${{ inputs.infile }} ${{ github.action_path }}/.update-yaml.tmp || true) | wc -l | sed -e 's/ //g')
         if [ $updated = 0 ]; then updated='false' ; else updated='true' ; fi ;
-      shell: bash
-    - run: >
-        updated=$(diff ${{ inputs.infile }} .update-yaml.tmp | wc -l | sed -e 's/ //g') ;
-        if [ ${updated} = 0 ]; then updated='false' ; else updated='true' ; fi ;
         echo "::set-output name=updated::${updated}"
+        mv ${{ github.action_path }}/.update-yaml.tmp ${{ inputs.infile }}
       shell: bash
       id: update-yaml
-    - run: mv .update-yaml.tmp ${{ inputs.infile }}
-      shell: bash
