--- a/action.yml
+++ b/action.yml
@@ -27,9 +27,9 @@ runs:
         python ${{ github.action_path }}/update-yaml.py -i ${{ inputs.infile }} -V "${{ inputs.varlist }}" > ${{ github.action_path }}/.update-yaml.tmp
       shell: bash
     - run: >
-        updated=$((diff ${{ inputs.infile }} ${{ github.action_path }}/.update-yaml.tmp || true) | wc -l | sed -e 's/ //g')
+        updated=$((diff ${{ inputs.infile }} ${{ github.action_path }}/.update-yaml.tmp || true) | wc -l | sed -e 's/ //g') ;
         if [ $updated = 0 ]; then updated='false' ; else updated='true' ; fi ;
-        echo "::set-output name=updated::${updated}"
+        echo "::set-output name=updated::${updated}" ;
         mv ${{ github.action_path }}/.update-yaml.tmp ${{ inputs.infile }}
       shell: bash
       id: update-yaml
