--- a/action.yml
+++ b/action.yml
@@ -29,7 +29,7 @@ runs:
     - run: >
         updated=$((diff ${{ inputs.infile }} ${{ github.action_path }}/.update-yaml.tmp || true) | wc -l | sed -e 's/ //g') ;
         if [ $updated = 0 ]; then updated='false' ; else updated='true' ; fi ;
-        echo "::set-output name=updated::${updated}" ;
+        echo "updated=${updated}" >> $GITHUB_OUTPUT ;
         mv ${{ github.action_path }}/.update-yaml.tmp ${{ inputs.infile }}
       shell: bash
       id: update-yaml
